--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -4,7 +4,9 @@ description = ''
 authors = []
 telemetry = false
 cache_dir = './.cache'
-requirements = []
+
+[[project.requirements]]
+contract_id = "SP2PABAF9FTAJYNFZH93XENAJ8FVY99RRM50D2JG9.clarity-bitcoin-lib-v1"
 
 [contracts.svg]
 path = 'contracts/svg.clar'
@@ -16,6 +18,16 @@ clarity_version = 1
 
 [repl.analysis]
 passes = ['check_checker']
+
+[contracts.commission-trait]
+path = "contracts/commission-trait.clar"
+
+[contracts.nft-trait]
+path = "contracts/nft-trait.clar"
+
+[contracts.stacks-svg-nft]
+path = "contracts/stacks-svg-nft.clar"
+depends_on = ["nft-trait", "commission-trait"]
 
 [repl.analysis.check_checker]
 strict = false
